Gunicorn config file with email password and log set-up

--- a/deploy_tools/gunicorn-systemd.template.service
+++ b/deploy_tools/gunicorn-systemd.template.service
@@ -4,9 +4,12 @@ Description=Gunicorn server for SITENAME
 [Service]
 Restart=on-failure
 User=bob
+Environment=EMAIL_PASSWORD=PSWD
 WorkingDirectory=/home/bob/sites/SITENAME/source
 ExecStart=/home/bob/sites/SITENAME/virtualenv/bin/gunicorn \
     --bind unix:/tmp/SITENAME.socket \
+    --access-logfile ../access.log \
+    --error-logfile ../error.log \
     superlists.wsgi:application
 
 [Install]
